force-app/main/default/objects/ChatSupportTeam__c/ChatSupportTeam__c.object-meta.xml
<CustomObject>
    <label>ChatSupportTeam</label>
    <nameField>
        <label>ChatSupportTeam Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ChatSupportTeams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>