force-app/main/default/objects/ChatSupportTeam__c/fields/AgentDevName__c.field-meta.xml
<CustomField>
    <fullName>AgentDevName__c</fullName>
    <label>AgentDevName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>