force-app/main/default/objects/ChatSupportTeam__c/fields/Button_ID__c.field-meta.xml
<CustomField>
    <fullName>Button_ID__c</fullName>
    <label>Button ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>