force-app/main/default/objects/ChatSupportTeam__c/fields/Chat_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Chat_Deployment__c</fullName>
    <label>Chat Deployment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>