force-app/main/default/objects/ChatSupportTeam__c/fields/SupportTeam__c.field-meta.xml
<CustomField>
    <fullName>SupportTeam__c</fullName>
    <label>SupportTeam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMS Team</fullName>
            </value>
            <value>
                <fullName>ME Team</fullName>
            </value>
            <value>
                <fullName>LNDN Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>